AWS/kubeadm/k8/gateway/gateway.yaml
# The listening infrastructure: "give me an HTTP listener on port 80".
# Envoy Gateway reacts by deploying an Envoy proxy Deployment + Service for
# this Gateway in the envoy-gateway-system namespace.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: app-gateway
  namespace: three-tier
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: proxy-nodeport
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
